[package]
name = "frameserve"
version = "0.1.0"
edition = "2024"
default-run = "cli"

[dependencies]
axum = "0.8"
base64 = "0.22"
blake3 = { version = "1", features = ["mmap", "serde"] }
clap = { version = "4", features = ["derive"] }
jiff = { version = "0.2", features = ["serde"] }
num = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }

[profile.release]
debug = true
opt-level = 3
lto = "fat"
codegen-units = 1
